--- a/Training/EventPulseSeries_nonoise/initiative2/result_analysis_energy_updated.ipynb
+++ b/Training/EventPulseSeries_nonoise/initiative2/result_analysis_energy_updated.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 124,
    "id": "004c0092",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "('login1', '/project/def-nahee/kbas/pone_offline/graphnet_env/bin/python')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,17 +24,117 @@
   },
   {
    "cell_type": "markdown",
+   "id": "29d2a690",
+   "metadata": {},
+   "source": [
+    "This notebook analyses **test_predictions.csv** (event-level) and **metrics.csv** (epoch-level)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a0cd035",
+   "metadata": {},
+   "source": [
+    "The residual in logarithm of energy prediction is evaluated in this script"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89535673",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#### Why `residual_log10`?\n",
+    "\n",
+    "I analyze the prediction error in **log10-space** using `residual_log10`.  \n",
+    "This is especially convenient when the energy spans many orders of magnitude.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88d54431",
+   "metadata": {},
+   "source": [
+    "#### Definition of `residual_log10`\n",
+    "\n",
+    "`residual_log10` is defined as:\n",
+    "\n",
+    "$ \\mathrm{residual\\_log10} = \\widehat{\\log_{10}E} - \\log_{10}(E_\\mathrm{true}) $\n",
+    "\n",
+    "In the CSV this corresponds to:\n",
+    "\n",
+    "$ \\mathrm{residual\\_log10} = \\mathrm{pred\\_log10\\_energy} - \\log_{10}(\\mathrm{true\\_energy}) $\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b65a4d1f",
+   "metadata": {},
+   "source": [
+    "#### Interpreting the sign of `residual_log10`\n",
+    "\n",
+    "- `residual_log10 = 0` → perfect prediction  \n",
+    "- `residual_log10 > 0` → the model **overpredicts** energy  \n",
+    "- `residual_log10 < 0` → the model **underpredicts** energy\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43ba2de4",
+   "metadata": {},
+   "source": [
+    "#### Quantiles: p16, p50, p84\n",
+    "\n",
+    "To summarize the distribution of `residual_log10`:\n",
+    "\n",
+    "- **p50** = median (middle value) → can be interpreted as **bias**\n",
+    "- **p16** and **p84** = the 16th and 84th percentiles  \n",
+    "  (If the residuals were Gaussian, these would roughly correspond to **±1σ** around the median.)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8de473f1",
+   "metadata": {},
+   "source": [
+    "#### Resolution proxy: W\n",
+    "\n",
+    "I define a resolution-like width using the central 68% interval:\n",
+    "\n",
+    "$ W = \\frac{p84 - p16}{2} $\n",
+    "\n",
+    "Interpretation:\n",
+    "- **Small W** → tighter residual distribution → **better resolution**\n",
+    "- **Large W** → wider residual distribution → **worse resolution**\n",
+    "\n",
+    "**Note:** W is measured in **log10-error units**, not directly in “% error”.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bba6a868",
+   "metadata": {},
+   "source": [
+    "So far we focused on **resolution**, summarized by  \n",
+    "$W = (p84 - p16)/2$, computed from the `residual_log10` distribution in each energy bin.\n",
+    "\n",
+    "Resolution tells us **how wide** the error distribution is.\n",
+    "\n",
+    "Next, we examine **bias**:  \n",
+    "Does the model systematically **overestimate** or **underestimate** the energy, and does this depend on energy?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9f366b73",
    "metadata": {},
    "source": [
-    "This notebook analyses **test_predictions.csv** (event-level) and **metrics.csv** (epoch-level).\n",
-    "\n",
     "# 0. Setup\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 125,
    "id": "1eaa2311",
    "metadata": {},
    "outputs": [],
@@ -65,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 126,
    "id": "b31088d1",
    "metadata": {},
    "outputs": [],
@@ -107,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 127,
    "id": "34a298ab",
    "metadata": {},
    "outputs": [
@@ -127,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 128,
    "id": "8109035a",
    "metadata": {},
    "outputs": [
@@ -208,7 +308,7 @@
        "2        0.256052     102.302177      1171  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 129,
    "id": "04e63e89",
    "metadata": {},
    "outputs": [
@@ -251,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 130,
    "id": "47e51c0f",
    "metadata": {},
    "outputs": [
@@ -299,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 131,
    "id": "968646f5",
    "metadata": {},
    "outputs": [
@@ -335,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 132,
    "id": "97d75310",
    "metadata": {},
    "outputs": [
@@ -364,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 133,
    "id": "76a75d62",
    "metadata": {},
    "outputs": [
@@ -387,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 134,
    "id": "9de98931",
    "metadata": {},
    "outputs": [
@@ -439,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 135,
    "id": "20c80edf",
    "metadata": {},
    "outputs": [
@@ -472,7 +572,14 @@
    "id": "5f0a2a15",
    "metadata": {},
    "source": [
-    "## 1.6 Residual vs truth (trend + spread)\n",
+    "## 1.6 Residual vs truth (trend + spread)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03e15162",
+   "metadata": {},
+   "source": [
     "\n",
     "This diagnostic shows how the **log10 residual** behaves across the energy range:\n",
     "\n",
@@ -490,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 136,
    "id": "f6acaff8",
    "metadata": {},
    "outputs": [
@@ -549,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 137,
    "id": "23e38432",
    "metadata": {},
    "outputs": [
@@ -604,8 +711,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2e0ec098",
+   "metadata": {},
+   "source": [
+    "## 1.8 Resolution vs truth (W)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b3ab290",
+   "metadata": {},
+   "source": [
+    "### 1.8.1: equal-width bins"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 138,
    "id": "1aa43b3b",
    "metadata": {},
    "outputs": [
@@ -770,7 +893,7 @@
        "9  1.099902  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,16 +932,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2e0ec098",
-   "metadata": {},
-   "source": [
-    "## 1.8 Resolution vs truth (W)\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 139,
    "id": "69b43b9c",
    "metadata": {},
    "outputs": [
@@ -850,8 +965,6 @@
    "id": "008896f9",
    "metadata": {},
    "source": [
-    "#### Interpreting the W trend (equal-width bins)\n",
-    "\n",
     "In the **equal-width** energy binning, the number of events per bin is **not uniform**.  \n",
     "At higher energies the bins contain **much fewer events**, so the quantile estimates (p16/p50/p84) become **statistically unstable**. This can artificially inflate the width  \n",
     "$W = (p84 - p16)/2$ and make it look like the resolution worsens rapidly with energy.\n",
@@ -860,8 +973,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2bc7dff3",
+   "metadata": {},
+   "source": [
+    "### 1.8.2: equal-population bins"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 140,
    "id": "d21cee2e",
    "metadata": {},
    "outputs": [],
@@ -879,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 141,
    "id": "043318f8",
    "metadata": {},
    "outputs": [
@@ -917,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 142,
    "id": "68390661",
    "metadata": {},
    "outputs": [
@@ -965,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 143,
    "id": "222ebd7d",
    "metadata": {},
    "outputs": [
@@ -1130,7 +1251,7 @@
        "9  0.710911  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 144,
    "id": "c97c571c",
    "metadata": {},
    "outputs": [
@@ -1187,92 +1308,6 @@
     "plt.title(\"Energy resolution (W) vs true energy (equal-population bins)\")\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5ee590de",
-   "metadata": {},
-   "source": [
-    "\n",
-    "#### Why `residual_log10`?\n",
-    "\n",
-    "I analyze the prediction error in **log10-space** using `residual_log10`.  \n",
-    "This is especially convenient when the energy spans many orders of magnitude.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "14d7a72a",
-   "metadata": {},
-   "source": [
-    "#### Definition of `residual_log10`\n",
-    "\n",
-    "`residual_log10` is defined as:\n",
-    "\n",
-    "$ \\mathrm{residual\\_log10} = \\widehat{\\log_{10}E} - \\log_{10}(E_\\mathrm{true}) $\n",
-    "\n",
-    "In the CSV this corresponds to:\n",
-    "\n",
-    "$ \\mathrm{residual\\_log10} = \\mathrm{pred\\_log10\\_energy} - \\log_{10}(\\mathrm{true\\_energy}) $\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a52d5264",
-   "metadata": {},
-   "source": [
-    "#### Interpreting the sign of `residual_log10`\n",
-    "\n",
-    "- `residual_log10 = 0` → perfect prediction  \n",
-    "- `residual_log10 > 0` → the model **overpredicts** energy  \n",
-    "- `residual_log10 < 0` → the model **underpredicts** energy\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e1338e9d",
-   "metadata": {},
-   "source": [
-    "#### Quantiles: p16, p50, p84\n",
-    "\n",
-    "To summarize the distribution of `residual_log10`:\n",
-    "\n",
-    "- **p50** = median (middle value) → can be interpreted as **bias**\n",
-    "- **p16** and **p84** = the 16th and 84th percentiles  \n",
-    "  (If the residuals were Gaussian, these would roughly correspond to **±1σ** around the median.)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f53e05ff",
-   "metadata": {},
-   "source": [
-    "#### Resolution proxy: W\n",
-    "\n",
-    "I define a resolution-like width using the central 68% interval:\n",
-    "\n",
-    "$ W = \\frac{p84 - p16}{2} $\n",
-    "\n",
-    "Interpretation:\n",
-    "- **Small W** → tighter residual distribution → **better resolution**\n",
-    "- **Large W** → wider residual distribution → **worse resolution**\n",
-    "\n",
-    "**Note:** W is measured in **log10-error units**, not directly in “% error”.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b8cc16a8",
-   "metadata": {},
-   "source": [
-    "So far we focused on **resolution**, summarized by  \n",
-    "$W = (p84 - p16)/2$, computed from the `residual_log10` distribution in each energy bin.\n",
-    "\n",
-    "Resolution tells us **how wide** the error distribution is.\n",
-    "\n",
-    "Next, we examine **bias**:  \n",
-    "Does the model systematically **overestimate** or **underestimate** the energy, and does this depend on energy?\n"
    ]
   },
   {
@@ -1304,7 +1339,7 @@
    "id": "f936ac04",
    "metadata": {},
    "source": [
-    "#### View A: median residual vs energy (log-space bias)\n",
+    "### 1.9.1: median residual vs energy (log-space bias)\n",
     "\n",
     "If we define  \n",
     "$\\mathrm{residual\\_log10} = \\widehat{\\log_{10}E} - \\log_{10}(E_\\mathrm{true})$,\n",
@@ -1318,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 145,
    "id": "d7dc0f3a",
    "metadata": {},
    "outputs": [
@@ -1351,7 +1386,7 @@
    "id": "be453176",
    "metadata": {},
    "source": [
-    "#### View B: median pred/true ratio vs energy (pred/true)\n",
+    "### 1.9.2: median pred/true ratio vs energy (pred/true)\n",
     "\n",
     "Because the residual is in log10-space, it can be converted into a multiplicative ratio:\n",
     "\n",
@@ -1369,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 146,
    "id": "1b1ffcba",
    "metadata": {},
    "outputs": [
@@ -1417,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 147,
    "id": "28e9b4b3",
    "metadata": {},
    "outputs": [
@@ -1437,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 148,
    "id": "0798a465",
    "metadata": {},
    "outputs": [
@@ -1462,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 149,
    "id": "b2c70ab1",
    "metadata": {},
    "outputs": [
@@ -1604,7 +1639,7 @@
        "4     0.385248       -0.090549       0.345556        0.515086  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1623,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 150,
    "id": "cbafc703",
    "metadata": {},
    "outputs": [
@@ -1694,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 151,
    "id": "d0e0bd43",
    "metadata": {},
    "outputs": [
@@ -1741,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 152,
    "id": "972979c7",
    "metadata": {},
    "outputs": [
@@ -1832,7 +1867,7 @@
        "1     0.333191       -0.051992       0.308839        0.472951  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
