--- a/Training/EventPulseSeries_nonoise/initiative2/result_analysis_energy_updated.ipynb
+++ b/Training/EventPulseSeries_nonoise/initiative2/result_analysis_energy_updated.ipynb
@@ -32,19 +32,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a0cd035",
-   "metadata": {},
-   "source": [
-    "The residual in logarithm of energy prediction is evaluated in this script"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "89535673",
    "metadata": {},
    "source": [
     "\n",
-    "#### Why `residual_log10`?\n",
+    "#### The residual in logarithm of energy prediction is evaluated in this script. Why `residual_log10`?\n",
     "\n",
     "I analyze the prediction error in **log10-space** using `residual_log10`.  \n",
     "This is especially convenient when the energy spans many orders of magnitude.\n"
@@ -114,15 +106,7 @@
    "cell_type": "markdown",
    "id": "bba6a868",
    "metadata": {},
-   "source": [
-    "So far we focused on **resolution**, summarized by  \n",
-    "$W = (p84 - p16)/2$, computed from the `residual_log10` distribution in each energy bin.\n",
-    "\n",
-    "Resolution tells us **how wide** the error distribution is.\n",
-    "\n",
-    "Next, we examine **bias**:  \n",
-    "Does the model systematically **overestimate** or **underestimate** the energy, and does this depend on energy?\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1308,6 +1292,20 @@
     "plt.title(\"Energy resolution (W) vs true energy (equal-population bins)\")\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68d35d79",
+   "metadata": {},
+   "source": [
+    "So far we focused on **resolution**, summarized by  \n",
+    "$W = (p84 - p16)/2$, computed from the `residual_log10` distribution in each energy bin.\n",
+    "\n",
+    "Resolution tells us **how wide** the error distribution is.\n",
+    "\n",
+    "Next, we examine **bias**:  \n",
+    "Does the model systematically **overestimate** or **underestimate** the energy, and does this depend on energy?\n"
    ]
   },
   {
