--- a/Training/EventPulseSeries_nonoise/initiative2/result_analysis_energy.ipynb
+++ b/Training/EventPulseSeries_nonoise/initiative2/result_analysis_energy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "id": "004c0092",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "('login1', '/project/def-nahee/kbas/pone_offline/graphnet_env/bin/python')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 56,
    "id": "1eaa2311",
    "metadata": {},
    "outputs": [],
@@ -137,15 +137,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 84,
    "id": "b31088d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "energy_test_predictions_path = Path(\"energy\") / \"test_predictions.csv\"\n",
     "energy_metrics_path =  Path(\"energy\") /\"metrics.csv\"\n",
+    "energy_resources_and_time_path =  Path(\"energy\") /\"resources_and_time.csv\"\n",
+    "\n",
     "df_energy_test_predictions = pd.read_csv(energy_test_predictions_path)\n",
-    "df_energy_metrics = pd.read_csv(energy_metrics_path)\n"
+    "df_energy_metrics = pd.read_csv(energy_metrics_path)\n",
+    "df_energy_resources_and_time = pd.read_csv(energy_resources_and_time_path)\n",
+    "\n"
    ]
   },
   {
@@ -179,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 58,
    "id": "34a298ab",
    "metadata": {},
    "outputs": [
@@ -199,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 59,
    "id": "8109035a",
    "metadata": {},
    "outputs": [
@@ -280,7 +284,7 @@
        "2        0.256052     102.302177      1171  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 60,
    "id": "04e63e89",
    "metadata": {},
    "outputs": [
@@ -323,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 61,
    "id": "47e51c0f",
    "metadata": {},
    "outputs": [
@@ -371,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 62,
    "id": "968646f5",
    "metadata": {},
    "outputs": [
@@ -407,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "id": "97d75310",
    "metadata": {},
    "outputs": [
@@ -436,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "id": "76a75d62",
    "metadata": {},
    "outputs": [
@@ -459,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "id": "9de98931",
    "metadata": {},
    "outputs": [
@@ -511,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "id": "20c80edf",
    "metadata": {},
    "outputs": [
@@ -569,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 67,
    "id": "f6acaff8",
    "metadata": {},
    "outputs": [
@@ -628,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 68,
    "id": "23e38432",
    "metadata": {},
    "outputs": [
@@ -700,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 69,
    "id": "1aa43b3b",
    "metadata": {},
    "outputs": [
@@ -865,7 +869,7 @@
        "9  1.099902  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 70,
    "id": "69b43b9c",
    "metadata": {},
    "outputs": [
@@ -954,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 71,
    "id": "d21cee2e",
    "metadata": {},
    "outputs": [],
@@ -972,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 72,
    "id": "043318f8",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 73,
    "id": "68390661",
    "metadata": {},
    "outputs": [
@@ -1058,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 74,
    "id": "222ebd7d",
    "metadata": {},
    "outputs": [
@@ -1223,7 +1227,7 @@
        "9  0.710911  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 75,
    "id": "c97c571c",
    "metadata": {},
    "outputs": [
@@ -1339,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 76,
    "id": "d7dc0f3a",
    "metadata": {},
    "outputs": [
@@ -1390,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 77,
    "id": "1b1ffcba",
    "metadata": {},
    "outputs": [
@@ -1438,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 78,
    "id": "28e9b4b3",
    "metadata": {},
    "outputs": [
@@ -1458,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 79,
    "id": "0798a465",
    "metadata": {},
    "outputs": [
@@ -1483,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 80,
    "id": "b2c70ab1",
    "metadata": {},
    "outputs": [
@@ -1625,7 +1629,7 @@
        "4     0.385248       -0.090549       0.345556        0.515086  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1644,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 81,
    "id": "cbafc703",
    "metadata": {},
    "outputs": [
@@ -1715,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 82,
    "id": "d0e0bd43",
    "metadata": {},
    "outputs": [
@@ -1762,7 +1766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 83,
    "id": "972979c7",
    "metadata": {},
    "outputs": [
@@ -1853,7 +1857,7 @@
        "1     0.333191       -0.051992       0.308839        0.472951  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1872,6 +1876,161 @@
     "\n",
     "snapshot\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "623308d1",
+   "metadata": {},
+   "source": [
+    "# 3. Resource and Time Information (epoch-level)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "ee042d98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>epoch</th>\n",
+       "      <th>elapsed_min</th>\n",
+       "      <th>epoch_duration_min</th>\n",
+       "      <th>rss_gb</th>\n",
+       "      <th>sys_mem_used_gb</th>\n",
+       "      <th>cpu_load_pct</th>\n",
+       "      <th>gpu_util_pct</th>\n",
+       "      <th>gpu_mem_used_gb</th>\n",
+       "      <th>gpu_mem_total_gb</th>\n",
+       "      <th>gpu_mem_util_pct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>20.718</td>\n",
+       "      <td>20.718</td>\n",
+       "      <td>1.848</td>\n",
+       "      <td>67.014</td>\n",
+       "      <td>54.87</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>35.763</td>\n",
+       "      <td>79.647</td>\n",
+       "      <td>44.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>40.223</td>\n",
+       "      <td>19.505</td>\n",
+       "      <td>1.935</td>\n",
+       "      <td>66.973</td>\n",
+       "      <td>69.56</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>35.763</td>\n",
+       "      <td>79.647</td>\n",
+       "      <td>44.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>59.665</td>\n",
+       "      <td>19.442</td>\n",
+       "      <td>1.936</td>\n",
+       "      <td>65.296</td>\n",
+       "      <td>78.85</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>42.218</td>\n",
+       "      <td>79.647</td>\n",
+       "      <td>53.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>79.173</td>\n",
+       "      <td>19.508</td>\n",
+       "      <td>1.836</td>\n",
+       "      <td>65.104</td>\n",
+       "      <td>81.14</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>42.218</td>\n",
+       "      <td>79.647</td>\n",
+       "      <td>53.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>98.282</td>\n",
+       "      <td>19.109</td>\n",
+       "      <td>1.836</td>\n",
+       "      <td>69.986</td>\n",
+       "      <td>74.37</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>42.218</td>\n",
+       "      <td>79.647</td>\n",
+       "      <td>53.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   epoch  elapsed_min  epoch_duration_min  rss_gb  sys_mem_used_gb  \\\n",
+       "0      0       20.718              20.718   1.848           67.014   \n",
+       "1      1       40.223              19.505   1.935           66.973   \n",
+       "2      2       59.665              19.442   1.936           65.296   \n",
+       "3      3       79.173              19.508   1.836           65.104   \n",
+       "4      4       98.282              19.109   1.836           69.986   \n",
+       "\n",
+       "   cpu_load_pct  gpu_util_pct  gpu_mem_used_gb  gpu_mem_total_gb  \\\n",
+       "0         54.87           0.0           35.763            79.647   \n",
+       "1         69.56          89.0           35.763            79.647   \n",
+       "2         78.85          54.0           42.218            79.647   \n",
+       "3         81.14           0.0           42.218            79.647   \n",
+       "4         74.37           0.0           42.218            79.647   \n",
+       "\n",
+       "   gpu_mem_util_pct  \n",
+       "0              44.9  \n",
+       "1              44.9  \n",
+       "2              53.0  \n",
+       "3              53.0  \n",
+       "4              53.0  "
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_energy_resources_and_time.head(5)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23ddb1f4",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
