--- a/Training/EventPulseSeries_nonoise/initiative2/analysis/result_analysis_zenith.ipynb
+++ b/Training/EventPulseSeries_nonoise/initiative2/analysis/result_analysis_zenith.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "7e910051",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('fc11013', '/project/def-nahee/kbas/pone_offline/graphnet_env/bin/python')"
+       "('login3', '/project/def-nahee/kbas/pone_offline/graphnet_env/bin/python')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "f69437bb",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "d99a446b",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "53080c51",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "e0a0d6b2",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "74df0e23",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "2fbe3afb",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "id": "acbffb96",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "id": "08e7695d",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "id": "cf1be6a6",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "id": "e4c6339b",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "id": "f6957530",
    "metadata": {},
    "outputs": [
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "id": "a973b761",
    "metadata": {},
    "outputs": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "id": "c2b483af",
    "metadata": {},
    "outputs": [
@@ -732,7 +732,7 @@
        "9  3.638124  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "id": "882ed59f",
    "metadata": {},
    "outputs": [
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "id": "4d7e93fc",
    "metadata": {},
    "outputs": [],
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "id": "9e88c6f8",
    "metadata": {},
    "outputs": [
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "id": "9b0e9fd1",
    "metadata": {},
    "outputs": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "id": "298ac12c",
    "metadata": {},
    "outputs": [
@@ -1093,7 +1093,7 @@
        "9  6.123431  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "id": "619bf853",
    "metadata": {},
    "outputs": [
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "id": "79fe69f6",
    "metadata": {},
    "outputs": [
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "id": "843af9b4",
    "metadata": {},
    "outputs": [
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "id": "84a0776e",
    "metadata": {},
    "outputs": [
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "id": "32e47eae",
    "metadata": {},
    "outputs": [
@@ -1355,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 25,
    "id": "6e3ce225",
    "metadata": {},
    "outputs": [
@@ -1503,7 +1503,7 @@
        "4   6.743217      12.823052      53.694321      78.336052    32.756500  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1522,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 26,
    "id": "20b84b74",
    "metadata": {},
    "outputs": [
@@ -1593,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 27,
    "id": "81b2c9ae",
    "metadata": {},
    "outputs": [
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 28,
    "id": "1539dd0b",
    "metadata": {},
    "outputs": [
@@ -1734,7 +1734,7 @@
        "1   3.548756      42.607635      97.761032     101.301414    29.346889  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1757,7 +1757,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "graphnet_env",
+   "display_name": "graphnet_env (3.10.13)",
    "language": "python",
    "name": "python3"
   },
