--- a/Training/EventPulseSeries_nonoise/initiative2/analysis/performance.ipynb
+++ b/Training/EventPulseSeries_nonoise/initiative2/analysis/performance.ipynb
@@ -17,16 +17,16 @@
     "**TDR mapping (for reference):**\n",
     "- Angular resolution (tracks): analogous to **TDR Fig. 43 (Right)**  \n",
     "- Energy resolution: analogous to **TDR Table 7** (we turn it into a curve vs energy)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89dd325f",
+   "metadata": {},
+   "source": [
     "\n",
-    "---\n",
-    "\n",
-    "## What you need on disk\n",
-    "This notebook expects GraphNeT exports:\n",
-    "- `energy/test_predictions*.csv`\n",
-    "- `azimuth/test_predictions*.csv`\n",
-    "- `zenith/test_predictions*.csv`\n",
-    "\n",
-    "(Adjust paths in the config section.)"
+    "# 1) Imports \n"
    ]
   },
   {
@@ -35,9 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# =======================\n",
-    "# 1) Imports + global style\n",
-    "# =======================\n",
+    "\n",
     "\n",
     "from __future__ import annotations\n",
     "\n",
@@ -68,9 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2) Configuration\n",
-    "\n",
-    "Edit **only this section** when you move folders or want different binning.\n"
+    "# 2) Configuration"
    ]
   },
   {
@@ -88,12 +84,8 @@
     }
    ],
    "source": [
-    "# =======================\n",
-    "# 2) Configuration\n",
-    "# =======================\n",
     "\n",
-    "# If you run from .../initiativeX/result_analysis/  -> set BASE to .../initiativeX/\n",
-    "# You can also hardcode an absolute path.\n",
+    "\n",
     "BASE = Path.cwd().resolve().parent\n",
     "\n",
     "# Where to save plots + tables\n",
@@ -121,7 +113,7 @@
     "\n",
     "\n",
     "\n",
-    "# Energy axis label used in plots (set to match what your `true_energy` represents)\n",
+    "# Energy axis label used in plots (set to match what `true_energy` represents)\n",
     "# Examples:\n",
     "#   r\"True neutrino energy $E_\\nu$ [GeV]\"\n",
     "#   r\"True muon energy $E_\\mu$ [GeV]\"\n",
@@ -135,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3) Load GraphNeT `test_predictions*.csv`\n",
+    "# 3) Load prediction tables\n",
     "\n",
     "We load the three heads (energy / azimuth / zenith).  \n",
     "If you have **multiple** `test_predictions*.csv` files per folder, this picks the first (sorted). Edit if needed.\n"
@@ -154,7 +146,36 @@
       "AZIMUTH: /project/6061446/kbas/Graphnet-Applications/Training/EventPulseSeries_nonoise/initiative2/azimuth/test_predictions.csv (41311, 11)\n",
       "ZENITH : /project/6061446/kbas/Graphnet-Applications/Training/EventPulseSeries_nonoise/initiative2/zenith/test_predictions.csv (41311, 8)\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "\n",
+    "def _find_one(base: Path, pattern: str) -> Path:\n",
+    "    hits = sorted((base).glob(pattern))\n",
+    "    if len(hits) == 0:\n",
+    "        raise FileNotFoundError(f\"No files matched: {base / pattern}\")\n",
+    "    return hits[0]\n",
+    "\n",
+    "energy_path  = _find_one(BASE, ENERGY_GLOB)\n",
+    "azimuth_path = _find_one(BASE, AZIMUTH_GLOB)\n",
+    "zenith_path  = _find_one(BASE, ZENITH_GLOB)\n",
+    "\n",
+    "energy_df = pd.read_csv(energy_path)\n",
+    "az_df     = pd.read_csv(azimuth_path)\n",
+    "zen_df    = pd.read_csv(zenith_path)\n",
+    "\n",
+    "print(\"ENERGY :\", energy_path,  energy_df.shape)\n",
+    "print(\"AZIMUTH:\", azimuth_path, az_df.shape)\n",
+    "print(\"ZENITH :\", zenith_path,  zen_df.shape)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c9bb09f3",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -222,7 +243,19 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "display(energy_df.head(2))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "936b1a9d",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -310,7 +343,18 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "display(az_df.head(2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "79317322",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -388,32 +432,7 @@
     }
    ],
    "source": [
-    "# =======================\n",
-    "# 3) Load prediction tables\n",
-    "# =======================\n",
-    "\n",
-    "def _find_one(base: Path, pattern: str) -> Path:\n",
-    "    hits = sorted((base).glob(pattern))\n",
-    "    if len(hits) == 0:\n",
-    "        raise FileNotFoundError(f\"No files matched: {base / pattern}\")\n",
-    "    return hits[0]\n",
-    "\n",
-    "energy_path  = _find_one(BASE, ENERGY_GLOB)\n",
-    "azimuth_path = _find_one(BASE, AZIMUTH_GLOB)\n",
-    "zenith_path  = _find_one(BASE, ZENITH_GLOB)\n",
-    "\n",
-    "energy_df = pd.read_csv(energy_path)\n",
-    "az_df     = pd.read_csv(azimuth_path)\n",
-    "zen_df    = pd.read_csv(zenith_path)\n",
-    "\n",
-    "print(\"ENERGY :\", energy_path,  energy_df.shape)\n",
-    "print(\"AZIMUTH:\", azimuth_path, az_df.shape)\n",
-    "print(\"ZENITH :\", zenith_path,  zen_df.shape)\n",
-    "\n",
-    "# Quick peek\n",
-    "display(energy_df.head(2))\n",
-    "display(az_df.head(2))\n",
-    "display(zen_df.head(2))\n"
+    "display(zen_df.head(2))"
    ]
   },
   {
@@ -428,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -605,9 +624,7 @@
     }
    ],
    "source": [
-    "# =======================\n",
-    "# 4) Merge\n",
-    "# =======================\n",
+    "\n",
     "\n",
     "def _choose_merge_key(*dfs: pd.DataFrame) -> str | None:\n",
     "    # keys we try, in order\n",
@@ -665,12 +682,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# =======================\n",
-    "# 5) Helpers\n",
+    "#  Helpers\n",
     "# =======================\n",
     "\n",
     "def _first_existing(df: pd.DataFrame, candidates: list[str]) -> str:\n",
@@ -722,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "c8921102",
    "metadata": {},
    "outputs": [
@@ -755,7 +772,7 @@
    ],
    "source": [
     "# =======================\n",
-    "# 5) Resolve columns + compute derived columns\n",
+    "#  Resolve columns + compute derived columns\n",
     "# =======================\n",
     "\n",
     "# ---- Energy truth/pred ----\n",
@@ -832,18 +849,24 @@
    "id": "f69662d2",
    "metadata": {},
    "source": [
-    "# 6) Plot — Angular resolution (overall): median Δψ vs energy\n",
+    "# 6) Plot — Angular resolution (overall): median Δψ vs energy\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e549ca1",
+   "metadata": {},
+   "source": [
+    "- **x-axis:** True energy ($E$) \\[GeV\\] *(log scale)*\n",
+    "- **y-axis:** Median opening angle ($\\Psi_{\\rm med}$) \\[deg\\]\n",
+    "- **Shaded band:** 16–84% (≈ 68% containment)\n",
     "\n",
-    "**x-axis:** True energy \\(E\\) [GeV] (log scale)  \n",
-    "**y-axis:** Median opening angle \\(\\Psi_{\\rm med}\\) [deg]  \n",
-    "Shaded band: 16–84% (≈ 68% containment)\n",
-    "\n",
-    "TDR analogue: **Fig. 43 (Right)** (track angular resolution).\n"
+    "**TDR analogue:** Fig. 43 (Right) *(track angular resolution)*.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "051dddcd",
    "metadata": {},
    "outputs": [
@@ -866,9 +889,6 @@
     }
    ],
    "source": [
-    "# =======================\n",
-    "# 6) Angular resolution (overall)\n",
-    "# =======================\n",
     "\n",
     "bins = build_logE_bins(df[\"logE_true\"], LOGE_BIN_WIDTH)\n",
     "df[\"logE_bin\"] = pd.cut(df[\"logE_true\"], bins=bins, include_lowest=True)\n",
@@ -903,17 +923,24 @@
    "metadata": {},
    "source": [
     "# 7) Plot — Angular resolution split by declination bands (sinδ)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be64eada",
+   "metadata": {},
+   "source": [
+    "- **x-axis:** True energy ($E$) \\[GeV\\] *(log scale)*\n",
+    "- **y-axis:** Median opening angle ($\\Psi_{\\rm med}$) \\[deg\\]\n",
+    "- **Curves:** TDR-like $\\sin\\delta$ bands.\n",
     "\n",
-    "**x-axis:** True energy \\(E\\) [GeV] (log scale)  \n",
-    "**y-axis:** Median opening angle \\(\\Psi_{\\rm med}\\) [deg]  \n",
-    "Curves: TDR-like **sinδ** bands.\n",
-    "\n",
-    "TDR analogue: again **Fig. 43 (Right)**, but shown per band.\n"
+    "**TDR analogue:** again Fig. 43 (Right), but shown per band.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "6287c4a3",
    "metadata": {},
    "outputs": [
@@ -936,9 +963,6 @@
     }
    ],
    "source": [
-    "# =======================\n",
-    "# 7) Angular resolution split by sinδ\n",
-    "# =======================\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
@@ -983,20 +1007,28 @@
    "metadata": {},
    "source": [
     "# 8) Plot — Energy resolution vs energy (68% containment style)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c46feedd",
+   "metadata": {},
+   "source": [
     "For each energy bin we compute:\n",
-    "- **bias:** median of \\(\\log_{10}(E_{\\rm pred}/E_{\\rm true})\\)\n",
-    "- **resolution (68%):** half-width of the 16–84% interval of \\(\\log_{10}(E_{\\rm pred}/E_{\\rm true})\\)\n",
+    "\n",
+    "- **bias:** median of $\\log_{10}\\!\\left(E_{\\rm pred}/E_{\\rm true}\\right)$  \n",
+    "- **resolution (68%):** half-width of the 16–84% interval of $\\log_{10}\\!\\left(E_{\\rm pred}/E_{\\rm true}\\right)$\n",
     "\n",
     "This is the closest “curve version” of **TDR Table 7**.\n",
     "\n",
-    "**x-axis:** True energy \\(E\\) [GeV] (log scale)  \n",
-    "**y-axis:** \\(\\sigma_{68}\\big[\\log_{10}(E_{\\rm pred}/E_{\\rm true})\\big]\\)\n"
+    "- **x-axis:** True energy ($E$) \\[GeV\\] *(log scale)*\n",
+    "- **y-axis:** $\\sigma_{68}\\!\\left[\\log_{10}\\!\\left(E_{\\rm pred}/E_{\\rm true}\\right)\\right]$\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "cd002b12",
    "metadata": {},
    "outputs": [
@@ -1223,9 +1255,7 @@
     }
    ],
    "source": [
-    "# =======================\n",
-    "# 8) Energy resolution\n",
-    "# =======================\n",
+    "\n",
     "\n",
     "ratio = (df[\"E_pred_GeV\"] / df[\"E_true_GeV\"]).to_numpy(dtype=float)\n",
     "ratio = np.where(np.isfinite(ratio) & (ratio > 0), ratio, np.nan)\n",
@@ -1306,19 +1336,18 @@
    "source": [
     "# 9) Effective area (A_eff)\n",
     "\n",
-    "Your `I3MCTree_postprop` indicates a **primary νμ** → (CC) → **μ + hadrons**, so **A_eff(Eν)** may be possible.\n",
+    "`I3MCTree_postprop` indicates a **primary νμ** → (CC) → **μ + hadrons**, so **A_eff(Eν)** may be possible.\n",
     "\n",
-    "However, **from `test_predictions*.csv` alone** you typically *cannot* get an absolute effective area.\n",
-    "To compute **absolute A_eff**, you still need generator metadata such as:\n",
+    "However, to compute **absolute A_eff**, we still need generator metadata such as:\n",
     "- a per-event generation weight (e.g. `I3MCWeightDict`, `LeptonInjectorWeight`, `OneWeight/TotalWeight`, etc.)\n",
     "- the thrown phase space (injection area / solid angle / N_generated)\n",
     "\n",
-    "If those weights exist in the I3 frames, you can compute **A_eff vs Eν** (TDR Fig.42-style). If not, you can still compute **resolution plots** (angular/energy), and at best report **selection efficiencies**."
+    "If those weights exist in the I3 frames, we can compute **A_eff vs Eν** (TDR Fig.42-style). If not, we can still compute **resolution plots** (angular/energy), and at best report **selection efficiencies**."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "371ef342",
    "metadata": {},
    "outputs": [
@@ -1337,8 +1366,7 @@
     "# =======================\n",
     "\n",
     "# This cell is OPTIONAL.\n",
-    "# It helps you check which weight keys exist in your i3 files.\n",
-    "# If IceTray is not available on your machine, it will simply print a message.\n",
+    "# It helps us check which weight keys exist in your i3 files.\n",
     "\n",
     "try:\n",
     "    from icecube import dataio, icetray, dataclasses, simclasses\n",
