--- a/Training/EventPulseSeries_nonoise/initiative2/analysis/performance.ipynb
+++ b/Training/EventPulseSeries_nonoise/initiative2/analysis/performance.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0511866c",
    "metadata": {},
    "source": [
-    "# P-ONE νμ CC sample (μ + hadrons) — Reconstruction Performance Plots (TDR-inspired)\n",
+    "# 0) Information"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "690b8aa0",
+   "metadata": {},
+   "source": [
+    "# 0) P-ONE νμ CC sample (μ + hadrons) — Reconstruction Performance Plots (TDR-inspired)\n",
     "\n",
     "**Note:** Although this sample is often described as “Mu± + hadrons”, the `I3MCTree_postprop` shows a **primary `NuMu`** and an interaction vertex producing **`MuMinus/MuPlus` + hadronic cascade**. So treat it as a **neutrino-induced muon** sample when matching IceCube-Gen2 TDR figures.\n",
     "\n",
@@ -18,6 +27,47 @@
     "- Angular resolution (tracks): analogous to **TDR Fig. 43 (Right)**  \n",
     "- Energy resolution: analogous to **TDR Table 7** (we turn it into a curve vs energy)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a14578a",
+   "metadata": {},
+   "source": [
+    "## 0.1) Opening angle (angular error) — definition\n",
+    "\n",
+    "In neutrino-direction reconstruction we compare the **true** neutrino direction with the **reconstructed / predicted** direction.  \n",
+    "The **opening angle** (often denoted $\\Delta\\psi$) is the **3D angular separation** between these two directions on the unit sphere.\n",
+    "\n",
+    "### Vector definition\n",
+    "Let $\\mathbf{u}_{\\mathrm{true}}$ and $\\mathbf{u}_{\\mathrm{pred}}$ be **unit vectors** pointing along the true and reconstructed directions. Then\n",
+    "\n",
+    "$$\n",
+    "\\Delta\\psi \\equiv \\arccos\\!\\left(\\mathbf{u}_{\\mathrm{true}}\\cdot \\mathbf{u}_{\\mathrm{pred}}\\right),\n",
+    "\\qquad 0 \\le \\Delta\\psi \\le \\pi .\n",
+    "$$\n",
+    "\n",
+    "This is the angle of the smallest rotation that takes the true direction into the predicted one.\n",
+    "\n",
+    "### Definition in terms of zenith / azimuth\n",
+    "Using zenith $\\theta$ and azimuth $\\phi$ (both in radians), the unit vector is\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{u}(\\theta,\\phi) =\n",
+    "\\left(\\sin\\theta\\cos\\phi,\\ \\sin\\theta\\sin\\phi,\\ \\cos\\theta\\right).\n",
+    "$$\n",
+    "\n",
+    "So the opening angle can be computed via the spherical law of cosines:\n",
+    "\n",
+    "$$\n",
+    "\\cos(\\Delta\\psi)=\n",
+    "\\sin\\theta_{\\mathrm{true}}\\sin\\theta_{\\mathrm{pred}}\\cos(\\phi_{\\mathrm{true}}-\\phi_{\\mathrm{pred}})\n",
+    "+\\cos\\theta_{\\mathrm{true}}\\cos\\theta_{\\mathrm{pred}}.\n",
+    "$$\n",
+    "\n",
+    "### Notes\n",
+    "- $\\Delta\\psi$ is **coordinate-invariant** (a true 3D separation; not separate errors in $\\theta$ and $\\phi$).\n",
+    "- In performance plots we often show the **median** $\\Delta\\psi$ or a containment (e.g. 68% quantile) versus energy.\n"
    ]
   },
   {
