--- a/Training/EventPulseSeries_nonoise/initiative2/analysis/performance.ipynb
+++ b/Training/EventPulseSeries_nonoise/initiative2/analysis/performance.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "cfd0664f",
+   "metadata": {},
+   "source": [
+    "# wrong:\n",
+    "1- sin_delta ≈ -cos(true_zenith) (South Pole approx) → declination bantları için. kanki bu mu yapiliyor scriptte? icecube guney kutbunda evt ama benim data p-one deneyine ait"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0511866c",
    "metadata": {},
    "source": [
